--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,22 @@ elife_train_sentence_level_positive_negative_pairs.csv
 elife_val_sentence_level_positive_negative_pairs.csv
 plos_train_sentence_level_positive_negative_pairs.csv
 plos_val_sentence_level_positive_negative_pairs.csv
+data/eLife_test.jsonl
+data/eLife_train.jsonl
+data/eLife_val.jsonl
+data/PLOS_test.jsonl
+data/PLOS_train.jsonl
+data/PLOS_val.jsonl
+data/Structured-Abstracts-Labels-102615.txt
+elife_trained_model/config_sentence_transformers.json
+elife_trained_model/config.json
+elife_trained_model/model.safetensors
+elife_trained_model/modules.json
+elife_trained_model/README.md
+elife_trained_model/sentence_bert_config.json
+elife_trained_model/special_tokens_map.json
+elife_trained_model/tokenizer_config.json
+elife_trained_model/tokenizer.json
+elife_trained_model/vocab.txt
+elife_trained_model/1_Pooling/config.json
+elife_trained_model/eval/similarity_evaluation_dev_results.csv
